--- a/style.css
+++ b/style.css
@@ -156,9 +156,18 @@ section h2 {
 }
 
 /* --- Timeline (Education & Experience) --- */
+
+.container-timeline {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .timeline-column h3 {
   color: #e86ce6;
-  margin-bottom: 0.25rem;
+  margin-top: 1.5rem;
 }
 
 .timeline {
@@ -169,7 +178,26 @@ section h2 {
 }
 
 .timeline-item h4 {
-  margin-top: 2rem;
+  margin-top: 0.25rem;
+}
+
+.timeline-card {
+  background-color: #2c254d;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px var(--shadow-color);
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  color: #fff;
+}
+
+.timeline-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.12);
+  background-color: #d4c8f0;
+}
+
+.timeline-card h4 {
+  margin-top: 20px;
 }
 
 /* --- Skills Section --- */
